--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
         "pusher/pusher-php-server": "^7.0",
         "spatie/laravel-medialibrary": "10.0.7",
-        "srmklive/paypal": "^3.0"
+        "srmklive/paypal": "^3.0",
+        "symfony/http-client": "^6.1",
+        "symfony/mailgun-mailer": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
